src/objects/ffirule__fflib_BatchProcessDetail__c.object
<CustomObject>
    <fields>
        <fullName>ffirule__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__BatchProcess__c</fullName>
        <label>Batch Process</label>
        <referenceTo>ffirule__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Batch Process Details</relationshipLabel>
        <relationshipName>BatchProcessDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__ChainNumber__c</fullName>
        <label>Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Holding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Process Detail</label>
    <nameField>
        <displayFormat>BPD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Process Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>